--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,14 +1,14 @@
 server {
     listen 80;
 
-#    location @app {
-#        include uwsgi_params;
-#        uwsgi_pass 127.0.0.1:4242;
-#    }
+    location @app {
+        include uwsgi_params;
+        uwsgi_pass 127.0.0.1:4242;
+    }
 
-#    location / {
-#        try_files @app;
-#    }
+    location / {
+        try_files @app;
+    }
 
     location /static {
         alias /app/src/static;
