updated config attempt

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,5 +1,7 @@
 server {
     listen 80;
+    access_log /app/logs/access.log;
+    error_log /app/logs/error.log;
 
     location @app {
         include uwsgi_params;
