--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get install -y python3 python3-dev python3-pip nginx
 RUN pip3 install uwsgi
 
 COPY ./ ./app
-WORKDIR ./app
+WORKDIR /app
 
 RUN pip3 install -r ./src/requirements.txt
-CMD service nginx start && uwsgi -s 127.0.0.1:4242 --manage-script-name --mount /=src.app:app
+CMD service nginx start -c ./deploy/nginx.conf && uwsgi -s 127.0.0.1:4242 --manage-script-name --mount /=src.app:app
