--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,19 +1,25 @@
-server {
-    listen 80;
-    access_log /app/logs/access.log;
-    error_log /app/logs/error.log;
+error_log /app/logs/error.log;
 
-    location @app {
-        include uwsgi_params;
-        uwsgi_pass 127.0.0.1:4242;
-    }
+events {
+    worker_connections 1024;
+}
 
-    location / {
-        try_files @app;
-    }
+http {
+    server {
+        listen 80 default_server;
+        access_log /app/logs/access.log;
 
-    location /static {
-        alias /app/src/static;
-        expires 1d;
+        location @app {
+            include uwsgi_params;
+            uwsgi_pass unix:/app/app.sock;
+        }
+
+        location / {
+            try_files @app;
+        }
+
+        location /static/ {
+            alias /app/src/static/;
+        }
     }
 }
