--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,25 +1,25 @@
 error_log /app/logs/error.log;
 
-events {
-    worker_connections 1024;
-}
+server {
+    gzip on;
+    sendfile        on;
+    client_max_body_size 20M;
+    keepalive_timeout  0;
+    
+    access_log /app/logs/access.log;
 
-http {
-    server {
-        listen 80 default_server;
-        access_log /app/logs/access.log;
+    location @app {
+        include /etc/nginx/uwsgi_params;
+        uwsgi_pass unix:///app/app.sock;
+    }
 
-        location @app {
-            include uwsgi_params;
-            uwsgi_pass unix:/app/app.sock;
-        }
+    location / {
+        try_files /test @app;
+    }
 
-        location / {
-            try_files @app;
-        }
-
-        location /static/ {
-            alias /app/src/static/;
-        }
+    location /static/ {
+        autoindex on;
+        expires 1w;
+        alias /app/src/static/;
     }
 }
