add mysql container, db connect code

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 version: "3"
 services: 
+  db:
+    image: mysql:5.7
+    command: mysqld --skip-ssl
+    ports:
+      - "32000:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+    volumes:
+      - ./db:/docker-entrypoint-initdb.d/:ro
   app: 
     build: ./
     ports: 
@@ -7,3 +16,7 @@ services:
     volumes: 
       - ./src:/app/src
       - ./logs:/app/logs
+    links:
+      - db
+    depends_on:
+      - db
