Moved environment variables to separate config Modified flask app to pull environment variables instead of hard coded values

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,20 @@ services:
     command: mysqld --skip-ssl
     ports:
       - "32000:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: root
+    env_file: ./deploy/local.env.conf
     volumes:
       - ./db:/docker-entrypoint-initdb.d/:ro
   app: 
     build: ./
     ports: 
       - 1337:80
+    environment:
+      ENVIRONMENT: 'local'
+      MYSQL_HOST: 'db'
+      MYSQL_PORT: '3306'
+    env_file: ./deploy/local.env.conf
     volumes: 
       - ./src:/app/src
       - ./logs:/app/logs
-    links:
-      - db
     depends_on:
       - db
